изменения после code review с ментором, завтра защита